<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:padding="@dimen/default_margin_half">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvGraph1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginTop="10dp"
                android:layout_weight="0.3"
                android:gravity="start"
                android:text="@string/phone"
                android:textSize="@dimen/default_fontSize_15" />


            <TextView
                android:id="@+id/tvGraph2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_weight="0.5"
                android:gravity="start"
                android:text="@string/_310714655"
                android:textSize="@dimen/default_fontSize_14" />

            <TextView
                android:id="@+id/btnGraph"
                android:layout_width="0dp"
                android:layout_height="@dimen/default_margin_25"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:backgroundTint="@color/yellowColor"
                android:background="@drawable/roundbutton"
                android:text="@string/processing"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/default_fontSize_10" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>