<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/default_margin_half">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/calender"
                    android:textColor="@color/purpleShade1"
                    android:textSize="@dimen/default_fontSize_30"
                    android:textStyle="bold" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/calender"
                    android:gravity="right" />


            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/calenderRecyclerViewTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"

                />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:elevation="@dimen/default_margin"
                android:padding="@dimen/default_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginStart="@dimen/default_margin"
                        android:gravity="center"
                        android:padding="@dimen/default_margin"
                        android:text="@string/scheduled_shifts"
                        android:textColor="@color/greyTextShade1"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/x_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginStart="@dimen/default_margin"
                        android:padding="@dimen/default_margin"
                        android:text="@string/you_have_no_shift_for_this_week"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text_large" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginStart="@dimen/default_margin"
                        android:padding="@dimen/default_margin"
                        android:text="@string/make_sure_you_have_your_time_preferences_set_up_so_you_are_eligible_for_shifts"
                        android:textColor="@color/greyTextShade2"
                        android:textSize="@dimen/default_fontSize_14" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/calender_setPrefBtn"
                        style="@style/FlatButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/set_up_your_preferences"
                        android:textAllCaps="false" />


                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:elevation="@dimen/default_margin"
                android:padding="@dimen/default_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginStart="@dimen/default_margin"
                        android:gravity="center"
                        android:padding="@dimen/default_margin"
                        android:text="@string/recommended_shifts"
                        android:textColor="@color/greyTextShade1"
                        android:textStyle="bold" />


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/calenderRecyclerViewBottom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginStart="@dimen/default_margin" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>