<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:elevation="@dimen/default_margin"

                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/default_margin_extra_large">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/rate" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/default_margin_extra_large"
                        android:gravity="start"
                        android:text="@string/good_show_up_rate_keep_it_up"
                        android:textColor="#000000"
                        android:textSize="@dimen/default_fontSize_20"

                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/default_margin_extra_large"
                        android:gravity="start"
                        android:text="@string/make_sure_you_have_your_time_preferences_set_up_so_you_are_eligible_for_shirts"
                        android:textColor="@color/greyTextShade8"
                        android:textSize="@dimen/default_fontSize_12"

                        />


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:elevation="@dimen/default_margin">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/default_margin_extra_large">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/default_margin_extra_large"
                        android:gravity="center"
                        android:text="@string/badges"
                        android:textColor="@color/blackText"
                        android:textSize="@dimen/default_fontSize_20" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/default_margin_extra_large"
                        android:gravity="start"
                        android:text="@string/below_are_your_badges_collected_over_your_tenure"
                        android:textColor="@color/greyTextShade8"
                        android:textSize="@dimen/default_fontSize_12" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/myStatRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                    </android.support.v7.widget.RecyclerView>

                    <Button
                        android:id="@+id/btnShowAllBadges"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:layout_marginLeft="@dimen/default_margin_50"
                        android:layout_marginRight="@dimen/default_margin_50"
                        android:layout_marginTop="@dimen/default_margin"
                        android:background="@drawable/roundbutton"
                        android:text="@string/show_all_badges"
                        android:textAllCaps="false"
                        android:textColor="@color/whiteColor" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>
</FrameLayout>