<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/default_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_margin_2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivBroadcast"
                android:layout_width="@dimen/small_image_size"
                android:layout_height="@dimen/small_image_size"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin_25"
                android:layout_marginTop="@dimen/default_margin_25"
                android:scaleType="centerCrop"
                android:src="@drawable/john" />


            <TextView
                android:id="@+id/tvBroadcast1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/default_margin_large"
                android:layout_marginStart="@dimen/default_margin_large"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/broadcast_from_arjun"
                android:textColor="@color/textColor"
                android:textSize="@dimen/default_fontSize_16"
                android:textStyle="bold|normal" />

            <TextView
                android:id="@+id/tvBroadcast2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_25"
                android:layout_marginStart="@dimen/default_margin_25"
                android:layout_marginTop="@dimen/default_margin_half"
                android:text="@string/_1_day_ago"
                android:textColor="@color/textColor"
                android:textSize="@dimen/default_fontSize_12" />

            <TextView
                android:id="@+id/tvBroadcast3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin_25"
                android:layout_marginLeft="@dimen/default_margin_25"
                android:layout_marginRight="@dimen/default_margin_25"
                android:layout_marginStart="@dimen/default_margin_25"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/sorry_team_but_we_are_closed_today_there_was_a_leak_in_one_of_the_pipes_i_have_updated_all_the_schedules"
                android:textColor="@color/textColor"
                android:textSize="@dimen/default_fontSize_14" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>




